--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,6 +43,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+      background-color: ivory;
   }
   
   .dropdown {
